--- a/lectures/latex/latex.tex
+++ b/lectures/latex/latex.tex
@@ -22,7 +22,7 @@ Förberedelse inför laboration 2.
 \begin{frame}[fragile=singleslide]
 \frametitle{Ordbehandling}
 De flesta moderna ordbehandlare, till exempel Microsoft Word,  fungerar 
-enligt \textsc{WYSIWYG}-principen:
+enligt \emph{WYSIWYG}-principen:
 
 \blankline
 \begin{center}
