--- a/lectures/machine-code/machine-code.tex
+++ b/lectures/machine-code/machine-code.tex
@@ -19,18 +19,15 @@
     \end{block}
 \end{frame}
 
-\begin{frame}[fragile=singleslide]
+\begin{frame}
     \frametitle{Bakgrund}
     \begin{columns}
         \begin{column}{0.75\textwidth}
             \begin{block}{Varför lära sig Maskinkod?}
                 \begin{itemize}
-                    \item \textbf{Effektiv Problemlösning:} Förstå hur datorer utför uppgifter kan leda till snabbare och mer effektiva lösningar när du programmerar.
-                    \pause
+                    \item \textbf{Djupare förståelse:} Ger insikt i hur datorer fungerar på en grundläggande nivå. Vad händer i datorn med kod som vi skrivit?
+                    \item \textbf{Effektiv Problemlösning:} Förståelse om hur datorer utför uppgifter kan leda till snabbare och mer effektiva lösningar när du programmerar.
                     \item \textbf{Förbättrade felsökningsfärdigheter:} Kunskap om maskinkod kan avslöja djupliggande orsaker till buggar, vilket gör det enklare att fixa komplexa problem.
-                    \pause
-                    \item \textbf{Bättre teknikval:} Grundläggande förståelse för maskinkod kan vägleda dig i val av hårdvara och optimeringar, likt valet av motor för en bil baserat på användningsområde.
-                    \pause
                     \item \textbf{Innovativt tänkande:} Förståelsen för datorns fundamentala operationer möjliggör kreativa och nyskapande tekniklösningar.
                 \end{itemize}
             \end{block}
@@ -53,20 +50,18 @@
 \end{frame}
 
 
-\begin{frame}[fragile=singleslide]
+\begin{frame}
     \frametitle{Vad är en dator?}
     \begin{columns}[T] % The [T] option is used to align the columns content at the top
         \begin{column}{0.6\textwidth}
             \begin{block}{Komponenter}
                 \begin{itemize}
-                    \item \textbf{CPU:} Datorns hjärna, innehåller ALU, kontrollenhet, och internminne (cache).
-                    \pause
-                    \item \textbf{Minne:} Lagring av data och instruktioner. RAM och permanent lagring (t.ex., hårddisk).
-                    \pause
-                    \item \textbf{I/O-enheter:} För inmatning och utmatning, t.ex., mus, tangentbord, skärm.
+                    \item<+> \textbf{CPU:} Datorns hjärna, innehåller ALU, kontrollenhet, och internminne (cache).
+                    \item<+> \textbf{Minne:} Lagring av data och instruktioner. RAM och permanent lagring (t.ex., hårddisk).
+                    \item<+> \textbf{I/O-enheter:} För inmatning och utmatning, t.ex., mus, tangentbord, skärm.
                 \end{itemize}
             \end{block}
-            \begin{block}{Programvara vs. Hårdvara}
+            \begin{block}{Programvara vs. Hårdvara}<+->
                 \begin{itemize}
                     \item \textbf{Hårdvara:} Fysiska delarna av datorn.
                     \item \textbf{Programvara:} Instruktioner för att utföra uppgifter.
@@ -96,7 +91,7 @@
     
 \end{frame}
 
-\begin{frame}[fragile=singleslide]
+\begin{frame}
     \frametitle{Binära tal - Introduktion}
     \begin{block}{Olika talsystem}
         \begin{itemize}
@@ -118,7 +113,7 @@
     \end{block}
 \end{frame}
 
-\begin{frame}[fragile=singleslide]
+\begin{frame}
     \frametitle{Binära tal - I Datorer}
     \begin{block}{Bits, Bytes och Ord}
         \begin{itemize}
@@ -136,7 +131,7 @@
     \end{block}
 \end{frame}
 
-\begin{frame}[fragile=singleslide]
+\begin{frame}
     \frametitle{Hexadecimala Tal}
     \begin{block}{Hexadecimala Talsystemet}
         \begin{itemize}
@@ -161,68 +156,68 @@
 
 
 
-\begin{frame}[fragile=singleslide]
+\begin{frame}
     \frametitle{Central Processing Unit (CPU)}
     % Structure and function of the CPU
     %  - ALU, registers, control unit
     %  - Role of the CPU in executing machine code
 \end{frame}
 
-\begin{frame}[fragile=singleslide]
+\begin{frame}
     \frametitle{Minne i datorer}
     % Types of memory: RAM, ROM, cache
     % How memory works with the CPU
 \end{frame}
 
-\begin{frame}[fragile=singleslide]
+\begin{frame}
     \frametitle{Grundläggande om maskinkod}
     % Definition and characteristics of machine code
     % Differences between machine code, assembly language, and high-level programming languages
 \end{frame}
 
-\begin{frame}[fragile=singleslide]
+\begin{frame}
     \frametitle{Maskininstruktioner}
     % Components of a machine instruction: opcode, operands
     % How instructions are executed by the CPU
 \end{frame}
 
-\begin{frame}[fragile=singleslide]
+\begin{frame}
     \frametitle{Assembly-språk}
     % Introduction to assembly language as a low-level programming language
     % Relationship between assembly language and machine code
 \end{frame}
 
-\begin{frame}[fragile=singleslide]
+\begin{frame}
     \frametitle{Skriva enkel maskinkod}
     % Example of a simple program in machine code
     % Explanation of what each part of the program does
 \end{frame}
 
-\begin{frame}[fragile=singleslide]
+\begin{frame}
     \frametitle{Maskinkod och moderna datorer}
     % Relevance of machine code in contemporary software development
     % Overview of how high-level languages are translated into machine code
 \end{frame}
 
-\begin{frame}[fragile=singleslide]
+\begin{frame}
     \frametitle{Kompilatorer och tolkar}
     % Explanation of compilers and interpreters
     % How they translate high-level code into executable machine code
 \end{frame}
 
-\begin{frame}[fragile=singleslide]
+\begin{frame}
     \frametitle{Utmaningar med att arbeta med maskinkod}
     % Difficulties and limitations of coding in machine code
     % Importance of understanding machine code for debugging and optimization
 \end{frame}
 
-\begin{frame}[fragile=singleslide]
+\begin{frame}
     \frametitle{Sammanfattning}
     % Recap of the key points covered
     % Encouragement to explore more about how programming languages work at the machine level
 \end{frame}
 
-\begin{frame}[fragile=singleslide]
+\begin{frame}
     \frametitle{Frågor och diskussion}
     % Open the floor for questions
     % Suggest further reading materials and resources
