--- a/lectures/unix/images/file-tree.tex
+++ b/lectures/unix/images/file-tree.tex
@@ -1,7 +1,7 @@
-\documentclass{standalone}
-\usepackage{forest}
+% \documentclass{standalone}
+% \usepackage{forest}
 
-\begin{document}
+% \begin{document}
 
 \begin{forest}
     for tree={
@@ -76,4 +76,4 @@
     ]
 \end{forest}
 
-\end{document}
+% \end{document}
