--- a/lectures/unix/unix.tex
+++ b/lectures/unix/unix.tex
@@ -107,7 +107,8 @@
     Varje fil finns i en katalog. Kataloger kan innehålla underkataloger, så man får en hierarkisk struktur, ett \emph{filträd}:
 
     \begin{center}
-        \includegraphics[width=\textwidth,height=0.7\textheight,keepaspectratio]{images/file-tree.pdf}
+        % \includegraphics[width=\textwidth,height=0.7\textheight,keepaspectratio]{images/file-tree.pdf}
+        \resizebox{!}{0.7\textheight}{\input{images/file-tree.tex}}
     \end{center}
 
 \end{frame}
