--- a/lectures/unix/slides.tex
+++ b/lectures/unix/slides.tex
@@ -1,4 +1,9 @@
-\documentclass[trans]{beamer} 
+\ifdefined\ishandout
+    \documentclass[handout]{beamer}
+\else
+    \documentclass{beamer}
+    \setbeamercovered{transparent}
+\fi
 
 \includeonly{unix}
 
@@ -18,19 +23,26 @@
 \usepackage{url}
 \usepackage{datetime2}
 
+\usepackage{fontspec}  			  % Allows loading system fonts
+\setmainfont{Latin Modern Roman}  % Set the main (serif) font
+\setsansfont{Latin Modern Roman}  % Force sans-serif font to use the same font
+
+
 \usepackage{listings}
 \lstset{resetmargins=true}
+
+\usepackage{forest}
 
 
 % Code listing environment that removes leading whitespace
 \lstnewenvironment{GobbleCode}[2][\baselineskip]
 {\lstset{
-	aboveskip=#1,
+    aboveskip=#1,
     belowskip=#1,
-	resetmargins=true,
-	xleftmargin=0em,
-	gobble=#2,
-	tabsize=4,
+    resetmargins=true,
+    xleftmargin=0em,
+    gobble=#2,
+    tabsize=4,
 }}
 {}
 
@@ -45,8 +57,8 @@
 \title{Datorer och datoranvändning\\Föreläsning 1 --- Unix/Linux}
 
 \frame[plain]{
-	\maketitle
-	\vspace{-2\baselineskip}
+    \maketitle
+    \vspace{-2\baselineskip}
 }
 
 \date{\the\year/\the\numexpr\year-1999}
